ci/k8s/cache-warmer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-cache-warmer
spec:
  selector:
    app: islandora-cache-warmer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-cache-warmer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-cache-warmer
  template:
    metadata:
      labels:
        app: islandora-cache-warmer
    spec:
      containers:
        - name: scyllaridae-cache-warmer
          image: __DOCKER_REPOSITORY__/scyllaridae-cache-warmer:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 8080
              hostPort: 8081
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
