ci/k8s/coverpage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-coverpage
spec:
  selector:
    app: islandora-coverpage
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-coverpage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-coverpage
  template:
    metadata:
      labels:
        app: islandora-coverpage
    spec:
      containers:
        - name: scyllaridae-coverpage
          image: lehighlts/scyllaridae-coverpage:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 8080
              hostPort: 8888
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
