ci/k8s/fits.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fits
spec:
  selector:
    app: fits
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fits
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fits
  template:
    metadata:
      labels:
        app: fits
    spec:
      containers:
        - name: fits
          image: islandora/fits:3.4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
              hostPort: 8084
          readinessProbe:
            httpGet:
              path: /fits/version
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
