ci/k8s/hls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-hls
spec:
  selector:
    app: islandora-hls
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-hls
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-hls
  template:
    metadata:
      labels:
        app: islandora-hls
    spec:
      containers:
        - name: scyllaridae-hls
          image: lehighlts/scyllaridae-hls:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "4Gi"
          ports:
            - hostPort: 8085
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
