ci/k8s/homarus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-ffmpeg
spec:
  selector:
    app: islandora-ffmpeg
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-ffmpeg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-ffmpeg
  template:
    metadata:
      labels:
        app: islandora-ffmpeg
    spec:
      containers:
        - name: scyllaridae-ffmpeg
          image: lehighlts/scyllaridae-ffmpeg:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
