ci/k8s/houdini.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-imagemagick
spec:
  selector:
    app: islandora-imagemagick
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-imagemagick
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-imagemagick
  template:
    metadata:
      labels:
        app: islandora-imagemagick
    spec:
      containers:
        - name: scyllaridae-imagemagick
          image: __DOCKER_REPOSITORY__/scyllaridae-imagemagick:main-dff1880
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
