ci/k8s/hypercube.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-tesseract
spec:
  selector:
    app: islandora-tesseract
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-tesseract

spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-tesseract
  template:
    metadata:
      labels:
        app: islandora-tesseract
    spec:
      containers:
        - name: scyllaridae-tesseract
          image: lehighlts/scyllaridae-tesseract:main-14b2276
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
