ci/k8s/libreoffice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-libreoffice
spec:
  selector:
    app: islandora-libreoffice
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-libreoffice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-libreoffice
  template:
    metadata:
      labels:
        app: islandora-libreoffice
    spec:
      containers:
        - name: scyllaridae-libreoffice
          image: lehighlts/scyllaridae-libreoffice:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
