ci/k8s/mergepdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-mergepdf
spec:
  selector:
    app: islandora-mergepdf
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-mergepdf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-mergepdf
  template:
    metadata:
      labels:
        app: islandora-mergepdf
    spec:
      containers:
        - name: scyllaridae-mergepdf
          image: lehighlts/scyllaridae-mergepdf:main-14b2276
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 8080
              hostPort: 8088
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
