ci/k8s/ocrpdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-ocrpdf
spec:
  selector:
    app: islandora-ocrpdf
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-ocrpdf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-ocrpdf
  template:
    metadata:
      labels:
        app: islandora-ocrpdf
    spec:
      containers:
        - name: scyllaridae-ocrpdf
          image: lehighlts/scyllaridae-ocrpdf:main
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
              hostPort: 8089
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
