ci/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: islandora-microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  tls:
    - hosts:
        - __DOMAIN__
      secretName: __KUBE_TLS_SECRET__
  ingressClassName: nginx
  rules:
    - host: __DOMAIN__
      http:
        paths:
          - path: /libreoffice(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-libreoffice
                port:
                  number: 8080
          - path: /crayfits(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-crayfits
                port:
                  number: 8080
          - path: /homarus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-ffmpeg
                port:
                  number: 8080
          - path: /houdini(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-imagemagick
                port:
                  number: 8080
          - path: /hypercube(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-tesseract
                port:
                  number: 8080
          - path: /whisper(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-whisper
                port:
                  number: 8080
          - path: /coverpage(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-coverpage
                port:
                  number: 8080
          - path: /cache\-warmer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-cache-warmer
                port:
                  number: 8080
          - path: /mergepdf(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: islandora-mergepdf
                port:
                  number: 8080
